Change styles of Profile picture and Setting for correct view on small and large screens

--- a/src/pages/settings/settings.sass
+++ b/src/pages/settings/settings.sass
@@ -10,3 +10,9 @@ $sidebar-width: 270px
 		margin-left: $sidebar-width
 		@media (max-width: $breakpoint-small-max)
 			margin-left: 0
+	&__tab
+		padding: 0 16px
+		display: flex
+		@media (max-width: $breakpoint-small-max)
+			flex-direction: column
+			align-items: center
